Works with src and test

--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -10,8 +10,10 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts",
     "test/**/*.ts"
+  ],
+  "files": [
+    "src/index.ts"
   ],
   "exclude": [
     "build", "node_modules"
