--- a/www/package.json
+++ b/www/package.json
@@ -10,8 +10,8 @@
     "typescript": "~4.7.0"
   },
   "scripts": {
-    "compile": "tsc",
-    "watch": "tsc -w",
+    "compile": "tsc -p tsconfig-build.json",
+    "watch": "tsc -w -p tsconfig-build.json",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "test": "jest"
