Works at least!!!!!

--- a/www/jest.config.json
+++ b/www/jest.config.json
@@ -3,5 +3,10 @@
     "verbose": true,
     "preset": "ts-jest",
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["build"]
+    "testPathIgnorePatterns": [
+        "build"
+    ],
+    "moduleNameMapper": {
+        "^(\\.{1,2}/.*)\\.js$": "$1"
+    }
 }
