--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "outDir": "build",
     "lib": [
@@ -7,11 +6,9 @@
       "dom"
     ],
     "target": "es2015",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "test/**/*.ts"
-  ],
   "files": [
     "src/index.ts"
   ],
