--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^14.11.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-websocket-mock": "^2.4.0",
     "ts-jest": "^29.1.0",
     "typescript": "~4.7.0"
   },
