--- a/game/buildspec.yml
+++ b/game/buildspec.yml
@@ -4,15 +4,15 @@ phases:
   install:
     commands:
       #Install JAVA 8
-      - add-apt-repository ppa:openjdk-r/ppa
-      - apt-get update
-      - apt-get install -y openjdk-8-jdk
+      - sudo add-apt-repository ppa:openjdk-r/ppa
+      - sudo apt-get update
+      - sudo apt-get install -y openjdk-8-jdk
       - java -version
       #Install sbt
-      - echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
-      - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-      - apt-get update
-      - apt-get install -y sbt
+      - sudo echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
+      - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+      - sudo apt-get update
+      - sudo apt-get install -y sbt
   pre_build:
     commands:
       - REPOSITORY_NAME=game
