--- a/game/buildspec.yml
+++ b/game/buildspec.yml
@@ -3,11 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
-      - echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
-      - curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo apt-key add
-      - apt-get update
-      - apt-get install -y sbt
+      - yum install sbt
   pre_build:
     commands:
       - REPOSITORY_NAME=game
