--- a/game/buildspec.yml
+++ b/game/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - sudo rm -f /etc/yum.repos.d/bintray-rpm.repo
       - curl -L https://www.scala-sbt.org/sbt-rpm.repo > sbt-rpm.repo
       - sudo mv sbt-rpm.repo /etc/yum.repos.d/
-      - sudo yum install sbt
+      - sudo yum install -y sbt
   pre_build:
     commands:
       - REPOSITORY_NAME=game
