--- a/www/package.json
+++ b/www/package.json
@@ -11,10 +11,10 @@
     "typescript": "~4.7.0"
   },
   "scripts": {
-    "compile": "tsc -p tsconfig-build.json",
+    "build": "tsc -p tsconfig-build.json",
     "watch": "tsc -w -p tsconfig-build.json",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
+    "prepare": "npm run build",
+    "pretest": "npm run build",
     "test": "jest"
   }
 }
